--- a/app/src/main/res/layout/fragment_create_room.xml
+++ b/app/src/main/res/layout/fragment_create_room.xml
@@ -44,7 +44,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginHorizontal="@dimen/padding_entire"
-            android:layout_marginTop="@dimen/margin_createroom_cardview_top"
+            android:layout_marginTop="@dimen/margin_cardview_to_guidline_top"
             android:layout_marginBottom="@dimen/margin_createroom_cardview_bottom"
             app:layout_constraintBottom_toTopOf="@id/santabottombutton_createroom"
             app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +69,7 @@
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/textview_createroom_roomname"
-                        style="@style/TitleOfCreateRoom"
+                        style="@style/TitleOfCardView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/margin_createroom_roomname_title_bottom"
@@ -96,7 +96,7 @@
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/textview_createroom_expiration"
-                        style="@style/TitleOfCreateRoom"
+                        style="@style/TitleOfCardView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/createroom_room_expiration" />
@@ -129,7 +129,7 @@
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/textview_createroom_expirationtime"
-                        style="@style/TitleOfCreateRoom"
+                        style="@style/TitleOfCardView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/margin_createroom_crardview_titles_bottom"
