--- a/app/src/main/res/layout/fragment_join_room.xml
+++ b/app/src/main/res/layout/fragment_join_room.xml
@@ -41,7 +41,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/padding_entire"
-            android:layout_marginTop="@dimen/margin_createroom_cardview_top"
+            android:layout_marginTop="@dimen/margin_cardview_to_guidline_top"
             android:layout_marginBottom="@dimen/margin_createroom_cardview_bottom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/textview_joinroom_cardtitle"
-                    style="@style/TitleOfCreateRoom"
+                    style="@style/TitleOfCardView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="참여 코드 입력"
