--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="margin_space_letter">4dp</dimen>
     <dimen name="padding_cardview_horizontal">30dp</dimen>
     <dimen name="padding_cardview_vertical">25dp</dimen>
+    <dimen name="margin_cardview_to_guidline_top">16dp</dimen>
 
     <dimen name="margin_dialog_title_text_vertical">15dp</dimen>
     <dimen name="margin_dialog_button_text_vertical">25dp</dimen>
@@ -106,7 +107,6 @@
     <dimen name="padding_mymanitto_daydiff_textview_horizontal">10dp</dimen>
     <dimen name="padding_mymanitto_daydiff_textview_vertical">5dp</dimen>
 
-    <dimen name="margin_createroom_cardview_top">16dp</dimen>
     <dimen name="margin_createroom_cardview_bottom">35dp</dimen>
     <dimen name="size_createroom_cardview_titles">16sp</dimen>
     <dimen name="size_createroom_expiration_description">12sp</dimen>
@@ -133,7 +133,26 @@
     <dimen name="margin_createconfirm_preview_top">5dp</dimen>
     <dimen name="margin_createconfirm_divider_top">20dp</dimen>
     <dimen name="margin_createconfirm_no_mission_vertical">25dp</dimen>
+
     <dimen name="margin_joinroom_edittext_top">10dp</dimen>
+
+    <dimen name="margin_waitingroom_cardview_bottom">24dp</dimen>
+    <dimen name="padding_waitingroom_invitation_code_horizontal">8dp</dimen>
+    <dimen name="padding_waitingroom_invitation_code_vertical">3dp</dimen>
+    <dimen name="margin_waitingroom_invitation_code_top">27dp</dimen>
+    <dimen name="margin_waitingroom_divider_top">20dp</dimen>
+    <dimen name="size_waitingroom_invitation_code">10sp</dimen>
+    <dimen name="margin_waitingroom_recyclerview_top">19dp</dimen>
+    <dimen name="margin_waitingroom_recyclerview_bottom">12dp</dimen>
+    <dimen name="margin_waitingroom_recyclerview_end">12dp</dimen>
+    <dimen name="padding_waitingroom_recyclerview_start">28dp</dimen>
+    <dimen name="margin_waitingroom_notice_bottom">15dp</dimen>
+    <dimen name="size_waitingroom_notice">12sp</dimen>
+    <dimen name="margin_waitingroom_recyclerview_items">16dp</dimen>
+
+    <dimen name="height_memberitem_imageview">30dp</dimen>
+    <dimen name="margin_memberitem_image_end">12dp</dimen>
+    <dimen name="size_memberitem_name">17sp</dimen>
 
 
 </resources>
