feat: Set enable to matching button depending on whether admin or not

--- a/app/src/main/res/layout/fragment_waiting_room.xml
+++ b/app/src/main/res/layout/fragment_waiting_room.xml
@@ -121,7 +121,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/padding_createmission_cardview_horizontal"
                     android:layout_marginBottom="@dimen/margin_waitingroom_notice_bottom"
-                    android:text="@string/waitingroom_notice_owner"
+                    android:text="@{viewModel.isAdmin() ? @string/waitingroom_notice_admin : @string/waitingroom_notice_participant}"
                     android:textSize="@dimen/size_waitingroom_notice"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -136,6 +136,7 @@
             android:id="@+id/santabottombutton_waitingroom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:enabled="@{viewModel.isAdmin()}"
             android:layout_marginHorizontal="@dimen/padding_entire"
             android:layout_marginBottom="@dimen/margin_bottombutton_bottom"
             android:text="@string/waitingroom_bottombutton"
