--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -179,5 +179,11 @@
     <dimen name="padding_matched_mission">12dp</dimen>
     <dimen name="size_matched_mission">15sp</dimen>
 
+    <dimen name="margin_finish_redsocks_end">30dp</dimen>
+    <dimen name="margin_finish_greensocks_end">28dp</dimen>
+    <dimen name="width_finish_characters_layout">120dp</dimen>
+    <dimen name="height_finish_characters_layout">57dp</dimen>
+    <dimen name="margin_finish_characters_layout_end">16dp</dimen>
+
 
 </resources>
