--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
 
     <color name="red">#f31523</color>
     <color name="navy">#00154B</color>
+    <color name="green">#2F5846</color>
 </resources>
