--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -185,5 +185,11 @@
     <dimen name="height_finish_characters_layout">57dp</dimen>
     <dimen name="margin_finish_characters_layout_end">16dp</dimen>
 
+    <dimen name="margin_result_divider_top">18dp</dimen>
+    <dimen name="padding_result_recyclerview_vertical">16dp</dimen>
+    <dimen name="padding_itemresult_text_horizontal">14dp</dimen>
+    <dimen name="padding_itemresult_text_vertical">6dp</dimen>
+    <dimen name="margin_result_recyclerview_item">15dp</dimen>
+
 
 </resources>
