feat: Add maxLength attr to SantaEditText

--- a/app/src/main/res/layout/fragment_enter_name.xml
+++ b/app/src/main/res/layout/fragment_enter_name.xml
@@ -95,7 +95,8 @@
                     android:layout_marginTop="@dimen/margin_signin_edittext_top"
                     android:layout_marginBottom="@dimen/padding_signin_cardview_bottom_additional"
                     app:hint="@string/entername_edittext_hint"
-                    app:isSingleLine="false"
+                    app:isSingleLine="true"
+                    app:maxLength="5"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
