--- a/app/src/main/res/layout/santa_edit_text.xml
+++ b/app/src/main/res/layout/santa_edit_text.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/round_ractangle_background"
         android:backgroundTint="@color/gray_1"
         android:paddingHorizontal="@dimen/padding_santaedittext_root_horizontal">
@@ -17,7 +17,7 @@
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/edittext_santaedittext"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/margin_santaedittext_edittext_vertical"
             android:singleLine="true"
             android:layout_marginEnd="@dimen/padding_santaedittext_root_horizontal"
