--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -11,6 +11,7 @@
         <attr name="isEditable" format="boolean"/>
         <attr name="isSlim" format="boolean"/>
         <attr name="maxLength" format="integer" />
+        <attr name="maxLines" format="integer" />
     </declare-styleable>
 
     <declare-styleable name="SantaImageRoundButton">
