--- a/app/src/main/res/layout/fragment_create_room.xml
+++ b/app/src/main/res/layout/fragment_create_room.xml
@@ -22,13 +22,13 @@
             android:layout_height="0dp"
             app:backKey="true"
             app:backgroundStyle="noLogo"
-            app:noLogoTitle="@string/createroom_background_title"
-            app:noLogoDescription="@string/createroom_background_description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0.396"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:noLogoDescription="@string/createroom_background_description"
+            app:noLogoTitle="@string/createroom_background_title" />
 
         <View
             android:id="@+id/view_createroom_guideline"
@@ -79,9 +79,9 @@
                         android:id="@+id/edittext_createroom_roomname"
                         setText="@={viewModel.roomName}"
                         android:layout_width="match_parent"
-                        app:maxLength="15"
                         android:layout_height="@dimen/height_santaedittext_big"
-                        app:hint="@string/createroom_roomname_hint" />
+                        app:hint="@string/createroom_roomname_hint"
+                        app:maxLength="15" />
 
                 </LinearLayout>
 
