--- a/app/src/main/res/layout/viewholder_joined_room.xml
+++ b/app/src/main/res/layout/viewholder_joined_room.xml
@@ -30,10 +30,14 @@
                 android:id="@+id/textview_mymanitto_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:text="@{joinedRoom.roomName}"
                 android:textColor="@color/navy"
                 android:textFontWeight="700"
                 android:textSize="@dimen/size_mymanitto_title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="packed"
@@ -46,11 +50,11 @@
                 android:layout_marginTop="@dimen/margin_mymanitto_temp_top"
                 android:letterSpacing="-0.04"
                 android:lineHeight="21sp"
+                android:text="@string/joinedroom_santa_info_before_matching"
                 android:textColor="@color/gray_3"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/textview_mymanitto_title"
-                app:layout_constraintVertical_chainStyle="packed"
-                android:text="@string/joinedroom_santa_info_before_matching" />
+                app:layout_constraintVertical_chainStyle="packed" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/textview_mymanitto_state"
@@ -71,12 +75,12 @@
                 android:id="@+id/textview_mymanitto_mission"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_mymanitto_mittion_top"
                 android:letterSpacing="-0.06"
                 android:lineHeight="@dimen/lineheight_mymanitto_mission_text"
                 android:text="@{personalRoomInfo.myMission.content}"
                 android:textColor="@color/gray_2"
                 android:textSize="@dimen/size_mymanitto_mission_text"
-                android:layout_marginTop="@dimen/margin_mymanitto_mittion_top"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textview_mymanitto_state"
@@ -88,10 +92,10 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@color/white"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
