--- a/app/src/main/res/layout/santa_loading.xml
+++ b/app/src/main/res/layout/santa_loading.xml
@@ -6,7 +6,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/constraintlayout_santaloading_root"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <ProgressBar
             android:id="@+id/progressbar_santaloading"
