feat: Add loading to FinishFragment

--- a/app/src/main/res/layout/fragment_manitto_room_finish.xml
+++ b/app/src/main/res/layout/fragment_manitto_room_finish.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="org.sopt.santamanitto.room.manittoroom.ManittoRoomViewModel" />
@@ -174,6 +176,16 @@
                     android:src="@drawable/ic_tree"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
+
+                <org.sopt.santamanitto.view.SantaLoading
+                    android:layout_width="match_parent"
+                    android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
+                    android:layout_height="match_parent"
+                    app:error="@{viewModel.networkErrorOccur}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
