feat: Add loading to ResultFragment

--- a/app/src/main/res/layout/item_result.xml
+++ b/app/src/main/res/layout/item_result.xml
@@ -56,6 +56,15 @@
             app:layout_constraintTop_toTopOf="parent"
             tool:text="이영진" />
 
+        <org.sopt.santamanitto.view.SantaLoading
+            android:id="@+id/santaloading_itemresult"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
